# repo-scribe

./: .env.example  README.md  app.py  main.py  pyproject.toml  requirements.txt
config/: settings.py
graph/: pipeline.py
models/: state.py
nodes/: analyzer.py  formatter.py  ingestion.py  outliner.py  web_search.py  writer.py
output/: Agno-Multi-Agent-Systems_blog.md  buzzbot-ai_blog.md
tools/: github_tool.py  tavily_tool.py
ui/components/: blog_preview.py  export_panel.py  progress_tracker.py  sidebar.py
ui/styles/: custom.css
ui/utils/: blog_markdown.py
