[project]
name = "repo-scribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34.0",
    "langchain>=0.2.0",
    "langchain-aws>=0.1.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.1.0",
    "pydantic-settings>=2.0.0",
    "pygithub>=2.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "streamlit>=1.35.0",
    "tavily-python>=0.3.0",
    "typer>=0.12.0",
]
